add link to pogoda-cli

--- a/src/template.jade
+++ b/src/template.jade
@@ -2,4 +2,6 @@ ul.sunLogo
   - for(var i = 3; i--;)
     li
 
-h1 Pogoda Skałągi
+main
+  a(href='https://pogoda.skalagi.pl')
+    h1 Pogoda Skałągi
