--- a/src/pogoda-skalagi.styl
+++ b/src/pogoda-skalagi.styl
@@ -15,11 +15,15 @@ color = #539DC2
 
   *
     font-family 'Arimo', sans-serif
+  main
 
-  h1
-    margin 0 .5em
-    text-shadow 0 .1em color + 25%
+    a
+      text-decoration none
+      color inherit
 
+    h1
+      margin 0 .5em
+      text-shadow 0 .1em color + 25%
 sunWidth = 4em
 
 .sunLogo
