add actual temp

--- a/src/template.jade
+++ b/src/template.jade
@@ -5,3 +5,7 @@ ul.sunLogo
 main
   a(href='https://pogoda.skalagi.pl')
     h1 Pogoda Skałągi
+
+  .temp
+    span temperatura wynosi 
+    span.temp_val
