--- a/src/pogoda-skalagi.styl
+++ b/src/pogoda-skalagi.styl
@@ -24,6 +24,10 @@ color = #539DC2
     h1
       margin 0 .5em
       text-shadow 0 .1em color + 25%
+
+    .temp
+      font-weight bold
+      margin 1em 0
 sunWidth = 4em
 
 .sunLogo
